[tool.poetry]
name = "teststreamlitfirebase"
version = "0.1.0"
description = ""
authors = ["Bruno Mesquita Zamberlan <brunomesquitazamberlan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
firebase = "^4.0.1"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.39.0"
firebase-admin = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
